# libjpeg-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: checks.cmake
include/: jconfig.h.in
utils/: CMakeLists.txt
utils/cjpeg/: CMakeLists.txt
utils/ckconfig/: CMakeLists.txt
utils/djpeg/: CMakeLists.txt
utils/jpegtran/: CMakeLists.txt
utils/rdjpgcom/: CMakeLists.txt
utils/wrjpgcom/: CMakeLists.txt
